--- a/LTT/LTT.csproj
+++ b/LTT/LTT.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\BasicView.cs" />
     <Compile Include="View\ExceptionView.cs" />
+    <Compile Include="View\LectureView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
