[Add]프로그램 시작 시 LectureVO 리스트에 엑셀정보 삽입,전공,이수구분,학년 정보로 검색 후 출력 기능 추가=>교수명,과목명 검색 추가 필요

--- a/LTT/LTT.csproj
+++ b/LTT/LTT.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Controller\Login.cs" />
     <Compile Include="Controller\MainMenu.cs" />
     <Compile Include="Controller\WholeLecture.cs" />
+    <Compile Include="Model\LectureVO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\BasicView.cs" />
@@ -63,8 +64,6 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
