--- a/LTT/LTT.csproj
+++ b/LTT/LTT.csproj
@@ -50,10 +50,13 @@
     <Compile Include="Constant.cs" />
     <Compile Include="Controller\Exception.cs" />
     <Compile Include="Controller\Input.cs" />
+    <Compile Include="Controller\InterestSelection.cs" />
     <Compile Include="Controller\Login.cs" />
     <Compile Include="Controller\MainMenu.cs" />
     <Compile Include="Controller\WholeLecture.cs" />
+    <Compile Include="Model\InterestLecture.cs" />
     <Compile Include="Model\LectureVO.cs" />
+    <Compile Include="Model\MyLecture.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="View\BasicView.cs" />
