--- a/Java/SignUp/pom.xml
+++ b/Java/SignUp/pom.xml
@@ -17,6 +17,11 @@
   </build>
   <dependencies>
   	<dependency>
+  		<groupId>com.googlecode.json-simple</groupId>
+  		<artifactId>json-simple</artifactId>
+  		<version>1.1.1</version>
+  	</dependency>
+  	<dependency>
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
   		<version>8.0.29</version>
